--- a/public/index.html
+++ b/public/index.html
@@ -10,6 +10,7 @@
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 
         <!-- <link rel="stylesheet" href="css.css"> -->
     </head>
@@ -48,6 +49,8 @@
                                         <a href="/saved">Go to saved articles</a>
                                     </div>
                                 </div>
+
+                                <div class='addArticleInfoHere'></div>
                             </div>
                         
                     </div>
@@ -59,6 +62,6 @@
 
         </div>
         
-        <script src="../server.js" async defer></script>
+        <script type="text/javascript" src="index.js"></script>
     </body>
 </html>
