--- a/public/index.html
+++ b/public/index.html
@@ -11,20 +11,19 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
         <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-
-        <!-- <link rel="stylesheet" href="css.css"> -->
+        <link rel="stylesheet" href="css.css">
     </head>
     <body>
         <div class="container">
             <div class="row">
-                <div class="jumbotron">
+                <div class="jumbotron top">
                     <h1 class="display-4">News Scraper</h1>
                     <p class="lead">Scrape articles from The Guardian</p>
                     <hr class="my-4">
-                    <a id='scrape' class="btn btn-primary btn-lg scrape" href="#" role="button">Scrape new articles</a>
-                    <a id='home' class="btn btn-primary btn-lg" href="/home" role="button">Home</a>
-                    <a id='save' class="btn btn-primary btn-lg" href="/saved" role="button">Saved articles</a>               
-                    <a id='clear' class="btn btn-primary btn-lg" href="#" role="button">Clear articles</a>               
+                    <a id='scrape' class="btn btn-primary btn-lg scrape" href="#" role="button">Scrape Articles</a>
+                    <a id='home' class="btn btn-primary btn-lg" href="/home" role="button">Go Home</a>
+                    <a id='save' class="btn btn-primary btn-lg" href="/saved" role="button">See Saved Articles</a>               
+                    <a id='clear' class="btn btn-primary btn-lg" href="#" role="button">Clear Articles</a>               
 
                 </div>
             </div>
