--- a/public/index.html
+++ b/public/index.html
@@ -33,19 +33,17 @@
                     <!-- Where the articles go -->
                     <div class="article-box">
                         
-                        <h2 class="lead">No new articles to diplay. Click scrape above...</h1>
-
                             <div class="card">
                                 <div class="card-header text-center">
-                                    <h3>What would you like to do?</h3>
+                                    <h4>What would you like to do?</h3>
                                 </div>
                                 
                                 <div class="card-body text-center">
                                     <div>
-                                        <a class="scrape">Scrape articles</h3>
+                                        <h5 class="scrape" href=''>Scrape articles</h5>
                                     </div>
                                     <div>
-                                        <a href="/saved">Go to saved articles</a>
+                                        <h5 href="/saved">Go to saved articles</h5>
                                     </div>
                                 </div>
 
