--- a/public/index.html
+++ b/public/index.html
@@ -21,8 +21,8 @@
                     <p class="lead">Scrape articles from The Guardian</p>
                     <hr class="my-4">
                     <a id='scrape' class="btn btn-primary btn-lg scrape" href="#" role="button">Scrape Articles</a>
-                    <a id='home' class="btn btn-primary btn-lg" href="/home" role="button">Go Home</a>
-                    <a id='save' class="btn btn-primary btn-lg" href="/saved" role="button">See Saved Articles</a>               
+                    <a id='homeOnHome' class="btn btn-primary btn-lg" href="#" role="button">Go Home</a>
+                    <a id='saveOnHome' class="btn btn-primary btn-lg" href="/saved" role="button">See Saved Articles</a>               
                     <a id='clear' class="btn btn-primary btn-lg" href="#" role="button">Clear Articles</a>               
 
                 </div>
@@ -40,10 +40,10 @@
                                 
                                 <div class="card-body text-center">
                                     <div>
-                                        <h5 class="scrape" href=''>Scrape articles</h5>
+                                        <h5 class="#" href='#'>Scrape articles</h5>
                                     </div>
                                     <div>
-                                        <h5 href="/saved">Go to saved articles</h5>
+                                        <h5 id='save'>Go to saved articles</h5>
                                     </div>
                                 </div>
 
