--- a/public/index.html
+++ b/public/index.html
@@ -44,10 +44,10 @@
                                 
                                 <div class="card-body text-center">
                                     <div>
-                                        <h5 class="#" href='#'>Scrape articles</h5>
+                                        <h5 id='seeAllNotes' href='#'>See all notes</h5>
                                     </div>
                                     <div>
-                                        <h5 id='save'>Go to saved articles</h5>
+                                        <h5 id='seeAllArticles'>See all articles saved</h5>
                                     </div>
                                 </div>
    
