adds new version of app

--- a/public/index.html
+++ b/public/index.html
@@ -22,7 +22,7 @@
                     <h1 class="display-4">News Scraper</h1>
                     <p class="lead">Scrape articles from The Guardian</p>
                     <hr class="my-4">
-                    <a id='save' class="btn btn-primary btn-lg scrape" href="#" role="button">Click on the article to save</a>
+                    <a id='scrape' class="btn btn-primary btn-lg scrape" href="#" role="button">Scrape Articles</a>
                     <a id='display' class="btn btn-primary btn-lg display" href="#" role="button">Display Articles</a>
 
                     <a id='homeOnHome' class="btn btn-primary btn-lg" href="#" role="button">Go Home</a>
